# c-demo

./: .gitignore  Bill.c  Bill.h  CMakeLists.txt  README.md  main.c
bill/: Bill.c  Bill.h  main.c
files/: demo.txt
struct/: WubiWord.c  WubiWord.h  main.c  wubi86_jidian_user.dict.yaml
time/: time.c
